--- a/streptanthus_germ.Rmd
+++ b/streptanthus_germ.Rmd
@@ -33,6 +33,7 @@ library(brms)
 library(rstan)
 library(tidybayes)
 library(rethinking)
+library(broom)
 
 germ = read_csv("light_round1_tall.csv") %>% 
   filter(wps == 0)
@@ -64,7 +65,7 @@ one_per_row <- function(df) {
 }
 
 germone <- stdi %>% group_by(temps) %>%
-  select(-cumulative_germ) %>% # not needed in this encoding (I think...in any case would need to be recalculated)
+  dplyr::select(-cumulative_germ) %>% # not needed in this encoding (I think...in any case would need to be recalculated)
   nest() %>%
   mutate(newdata=map(data, one_per_row)) %>%
   select(-data) %>%
@@ -126,7 +127,6 @@ They somehow have the beta (temperature effect) embedded in their tagert stateme
 
 OK, and just want to see the zipoisson model from rethinking (I know this doesn't make sense with the data, but just feeding it in to see the stancode).
 
-
 ```{r, error=FALSE, message=FALSE, warning=FALSE}
 
 m3 = ulam(
@@ -148,13 +148,13 @@ stancode(m3)
 
 OK and one more with Gamma:
 
-```{r}
+```{r, error=FALSE, message=FALSE, warning=FALSE}
 
 make_stancode(day ~ temps, family = Gamma, data = germone)
 
 ```
 
-
+```{r, error=FALSE, message=FALSE, warning=FALSE}
 m3 = ulam(
   alist(
     germ ~ dgamma(r, s),
@@ -170,3 +170,31 @@ m3 = ulam(
 
 stancode(m3)
 ```
+
+
+Based on those, I wrote a Stan model: germ_zi_gamma.stan
+There are several things wrong with it: temp effects either need to be quadratic, or coded as categroical to capture negative effects of both low and high temps. 
+For now, I am going to filter to suboptimal temps and look for a positive effect of temp.
+
+```{r, error=FALSE, message=FALSE, warning=FALSE}
+
+germone_cool = germone %>% 
+  filter(temps < 25)
+
+stan_dat = list(
+	germ = germone_cool$germ,
+	temp = germone_cool$temps,
+	# n_temp = 8, 
+	day = germone_cool$day,
+	n = nrow(germone_cool)
+	)
+
+m4 = stan(file = "germ_zi_gamma.stan", data = stan_dat, iter = 2e3)
+
+tidy(m4, pars = c("b0", "bt_zi", "bt_gam", "log_scale"), conf.level = 0.95, conf.int = TRUE)
+
+```
+
+It runs, but the confidence in parameter estimates is low, I bet I've done something (many things) wrong.
+
+
